--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -85,6 +85,13 @@ html, body {
 	  margin-right: auto;
 	  float: none;
 }
+.painting {
+  border: solid 1px #CCC;
+  padding: 10px 10px;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
 // Glyphicons
 //@import "twitter/bootstrap/glyphicons.less";
 
