--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,17 @@
 <header>
-	<div class="navbar-inner navbar-default">
+	<div class="navbar-inner navbar-fixed-top navbar-default" role="navigation">
 		<div class="container"> 
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">WINSEDECOR</a>
-			</div>    
-			<ul class="nav nav-pills pull-right in-line">
-				<li><%= link_to "HOME",   '#'%></li>
+			</div>   
+			<div class="navbar-collapse collapse"> 
+			<ul class="nav navbar-nav nav-pills pull-right in-line">
 				<li><%= link_to "SERVICES",   '#'%></li>
 				<li><%= link_to "GALLERY",   '#'%></li>
 				<li><%= link_to "BLOG",   '#'%></li>
 				<li><%= link_to "CONTACT",   '#'%></li>	
 			</ul>
+			</div>
 		</div>
 	</div>
 </header>
