--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,7 @@
 <footer class="footer">
-	<div class="navbar navbar-default navbar-fixed-bottom">
-		<div class="container">
-			<div class="span12 centered">
-			<ul class="nav nav-pills in-line text-center">
-				<li><%= link_to "ABOUT",   '#' %></li>
-				<li><%= link_to "TERMS OF SERVICE", '#' %></li>
-				<li><%= link_to "PRIVACY", '#' %></li>
-				<li><%= link_to "PRESS", '#' %></li>
-			</ul>
-			</div>
-		</div>
-	</div>
+	<ul class="list-inline text-center">
+		<li><%= link_to "ABOUT",   '#' %></li>
+		<li><%= link_to "TERMS OF SERVICE", '#' %></li>
+		<li><%= link_to "PRESS", '#' %></li>
+	</ul>
 </footer>
