--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,4 @@
-<h1 class="text-center">Coming Soon</h1>
+<h2 class="text-center">Coming Soon</h2>
+<div class="container text-center">
+	<%= image_tag @image.url %>
+</div>
