--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -2,9 +2,9 @@
 <!--<div class="page-header">
 <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>-->
-<% @images.each do |image| %>
-<div class="painting">
-	<%= image_tag image.url%>
+<h1 class="text-center">Coming Soon</h1>
+<div class="container text-center">
+	<%= image_tag @image.url %>
 </div>
-<% end %>
+
 	  
