--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -16,10 +16,12 @@
 
 .navbar-inner{
     /*height: 90px*/
-    min-height: 60px
+    min-height: 50px
     }
 .navbar .brand{
     padding: 0 10px;
+	color: white;
+	
 }
 .navbar .nav > li > a {
     padding: 20px 15px;
