--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,5 @@
 <footer class="footer">
 	<ul class="list-inline text-center">
-		<li><%= link_to "ABOUT",   '#' %></li>
-		<li><%= link_to "TERMS OF SERVICE", '#' %></li>
-		<li><%= link_to "PRESS", '#' %></li>
+		<li>&#169; 2015 Winse Decor</li>
 	</ul>
 </footer>
