--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,33 +1,21 @@
-<h1>Listing images</h1>
+<h2>Images</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Width</th>
-      <th>Height</th>
-      <th>Url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @images.each do |image| %>
-      <tr>
-        <td><%= image.name %></td>
-        <td><%= image.description %></td>
-        <td><%= image.width %></td>
-        <td><%= image.height %></td>
-        <td><%= image.url %></td>
-        <td><%= link_to 'Show', image %></td>
-        <td><%= link_to 'Edit', edit_image_path(image) %></td>
-        <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<% @images.in_groups_of(4, false).each do |group|%>
+<div class='row'>
+	<% group.each do |image|%> 
+	<div class='col-md-3'> 
+		<%= link_to image_tag("#{image.url}", height:"150", width:"200"), image_path(image) %>
+	<p>
+		<%= image.name %>
+	</p>
+	<p>
+		<%= link_to 'Show', image %>
+		<%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
+	</p>
+	</div>
+	<% end %>
+</div>
+<% end %>
 <br>
 
 <%= link_to 'New Image', new_image_path %>
