--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,29 +1,14 @@
 <p id="notice"><%= notice %></p>
-
+<div class="image">
+<%= link_to image_tag("#{@image.url}", height:"60%", width:"60%"), image_path(@image) %>
 <p>
   <strong>Name:</strong>
   <%= @image.name %>
 </p>
-
 <p>
   <strong>Description:</strong>
   <%= @image.description %>
 </p>
-
-<p>
-  <strong>Width:</strong>
-  <%= @image.width %>
-</p>
-
-<p>
-  <strong>Height:</strong>
-  <%= @image.height %>
-</p>
-
-<p>
-  <strong>Url:</strong>
-  <%= @image.url %>
-</p>
-
 <%= link_to 'Edit', edit_image_path(@image) %> |
-<%= link_to 'Back', images_path %>
+<%= link_to 'Back', galleries_path %>
+</div>
