--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
 <h1 class="text-center">Coming Soon</h1>
-<!--<div class="container text-center">
+<div class="container text-center">
 	<%= image_tag @image.url %>
-</div>-->
+</div>
