--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -18,4 +18,6 @@
 <% end %>
 <br>
 
-<%= link_to 'New Image', new_image_path %>
+<%= link_to new_image_path, class: "btn btn-default" do%>
+<i class="glyphicon glyphicon-plus"></i>
+<% end %>
